# When-is-a-fill-bad

./: .gitignore  Makefile  PORTFOLIO_BRIEF.md  README.md  REAL_BTC_VALIDATION.md  RESEARCH_NOTE.md  pyproject.toml
archive/codex_intermediate/: DYNAMIC_LOB_IMPLEMENTATION_NOTE.md  REAL_BTC_VALIDATION.md  RESEARCH_SWEEP_SUMMARY.md  THESIS_TRANSFER_SUMMARY.md  remote_v0_1.tar  research_sweep.csv  thesis_transfer_sweep.csv
config/: default.yaml
configs/: phd_profile.json
data/fixtures/: btc_usd_mock_events.csv
data/processed/: synthetic_events.csv
notebooks/: 01_passive_execution_v0_1.ipynb  1_passive_execution_v0_1.ipynb
outputs/: main_analysis_summary.json
research_memo/: memo_v0_1.md
results/tables/: figure_1_fill_probability_vs_queue.csv  figure_2_adverse_drift_vs_imbalance.csv  figure_3_bad_fill_ratio_heatmap.csv  figure_4_execution_frontier.csv  figure_4_strategy_tradeoff.csv
scripts/: audit_kaggle_btc.py  build_real_btc_features.py  convert_kaggle_btc.py  run_dynamic_lob_analysis.py  run_main_analysis.py  run_real_btc_analysis.py  run_real_btc_validation.py
src/: simulator.py
src/fillbad/: __init__.py  liquidity_features.py  multilevel_flow.py  real_btc.py  real_validation.py  shock_analysis.py
src/lob_sim/: __init__.py  agents.py  audit.py  book.py  cli.py  config.py  data.py  evaluation.py  features.py  interaction.py  labels.py  metrics.py  models.py  null_model.py  phd_layer.py  (+4 more)
tests/: test_book.py  test_dynamic_lob.py  test_features.py  test_interaction.py  test_real_btc_features.py  test_real_btc_validation.py  test_research_pipeline.py
(+80 files in other folders)
