[project]
name = "lob-sim"
version = "0.1.0"
description = "A limit order book simulation framework with a configurable PhD research layer."
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "pyyaml",
  "scikit-learn"
]

[project.scripts]
lob-sim = "lob_sim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
